@@ -115,4 +115,7 @@ def main():
     osc.m_oscserver.close()
 
 if __name__ == '__main__':
-    sys.exit(main())
+    try:
+        sys.exit(main())
+    except:
+        pass
